--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "boilerpipe-scraper": "^1.0.0",
     "compromise": "^11.12.0",
     "express": "^4.16.3",
-    "mongoose": "^5.2.17"
+    "mongoose": "^5.2.17",
+    "natural": "^0.6.1"
   }
 }
